# GMCORE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_tests.py  run_tests.sh
lib/: quadpack.f90
run/: namelist.swm.mz
src/core/: damp_mod.F90  filter_mod.F90  filter_types_mod.F90  gmcore_mod.F90  hybrid_coord_mod.F90  hybrid_coord_test_mod.F90  interp_mod.F90  ke_mod.F90  mesh_mod.F90  nest_mod.F90  nh_mod.F90  operators_mod.F90  pv_mod.F90  reduce_mod.F90  reduced_types_mod.F90  refer_state_mod.F90  refer_state_wrf_mod.F90  sigma_coord_mod.F90  state_mod.F90  static_mod.F90  tend_mod.F90  time_schemes_mod.F90  vert_coord_mod.F90  weno_mod.F90
src/core/adv/: adv_batch_mod.F90  adv_mod.F90  ffsl_mod.F90  tracer_mod.F90  tvd_mod.F90
src/core/damp/: damp_mod.F90  div_damp_mod.F90  fft_mod.F90  laplace_damp_mod.F90  meridional_damp_mod.F90  rayleigh_damp_mod.F90  smag_damp_mod.F90  vor_damp_mod.F90  zonal_damp_mod.F90
src/core/pgf/: pgf_dflx_mod.F90  pgf_lin97_mod.F90  pgf_mod.F90  pgf_sb81_mod.F90  pgf_swm_mod.F90
src/core/refer_state/: refer_state_mod.F90  refer_state_types_mod.F90  refer_state_wrf_mod.F90
src/core/transport/: ffsl_mod.F90  tracer_mod.F90  transport_batch_mod.F90  transport_mod.F90
src/core/vert_coord/: hybrid_coord_ecmwf_mod.F90  hybrid_coord_mars_mod.F90  hybrid_coord_mod.F90  hybrid_coord_test_mod.F90  sigma_coord_mod.F90  vert_coord_mod.F90
src/drivers/: gmcore_adv_driver.F90  gmcore_driver.F90  gmcore_prepare.F90  gmcore_swm_driver.F90
src/dynamics/: filter_mod.F90  filter_types_mod.F90  gmcore_mod.F90  interp_mod.F90  moist_mod.F90  nh_mod.F90  operators_mod.F90  state_mod.F90  static_mod.F90  tend_mod.F90  time_schemes_mod.F90
src/dynamics/adv/: adv_batch_mod.F90  adv_mod.F90  ffsl_mod.F90  upwind_mod.F90
src/dynamics/damp/: damp_mod.F90  div_damp_mod.F90  laplace_damp_mod.F90  lat_damp_mod.F90  lon_damp_mod.F90  smag_damp_mod.F90  vor_damp_mod.F90  zonal_damp_mod.F90
src/dynamics/pgf/: pgf_mod.F90
src/dynamics/vert_coord/: hybrid_coord_ecmwf_mod.F90  hybrid_coord_mars_mod.F90  hybrid_coord_mod.F90  hybrid_coord_test_mod.F90  vert_coord_mod.F90
src/physics/: simple_physics_v6.F90  test_forcing_mod.F90
src/prepare/: bkg_mod.F90  era5_reader_mod.F90  fnl_reader_mod.F90  gmcore_prepare.F90  latlon_interp_mod.F90  mpas_reader_mod.F90  namelist  openmars_reader_mod.F90  prepare_mod.F90  ref_mod.F90  topo_mod.F90  vert_interp_mod.F90  waccm_reader_mod.F90
src/tests/: baroclinic_wave_test_mod.F90  dcmip31_test_mod.F90  held_suarez_test_mod.F90  ksp15_test_mod.F90  mars_cold_run_mod.F90  mountain_induced_wave_test_mod.F90  mountain_wave_test_mod.F90  namelist.bw.180x90  namelist.hs.180x90.l26  namelist.mz.180x90.l26  namelist.mz.360x180.l26  namelist.rh.180x90.l26  namelist.rh4.180x90  namelist.rh4.180x90.l26  namelist.ss.180x90.l26  namelist.ss.360x180  rossby_haurwitz_wave_3d_test_mod.F90  steady_state_pgf_test_mod.F90  steady_state_test_mod.F90
src/tests/adv/: dcmip12_test_mod.F90  deform_case4_mod.F90  deform_test_mod.F90  moving_vortices_test_mod.F90  solid_rotation_test_mod.F90
src/tests/swm/: cross_pole_flow_test_mod.F90  jet_zonal_flow_test_mod.F90  mountain_zonal_flow_test_mod.F90  namelist.swm.cp.360x180  namelist.swm.jz  namelist.swm.jz.360x180  namelist.swm.jz.720x360  namelist.swm.mz  namelist.swm.mz.180x90  namelist.swm.mz.3600x1800  namelist.swm.mz.360x180  namelist.swm.mz.720x360  namelist.swm.rh4  namelist.swm.rh4.180x90  namelist.swm.rh4.360x180  namelist.swm.rh4.720x360  namelist.swm.sg.360x180  namelist.swm.sw.360x180  plot_jz.ncl  plot_mz.ncl  plot_rh.ncl  rossby_haurwitz_wave_test_mod.F90  shallow_water_waves_test_mod.F90  steady_geostrophic_flow_test_mod.F90  vortex_erosion_test_mod.F90
src/utils/: allocator_mod.F90  block_mod.F90  const_mod.F90  debug_mod.F90  diag_state_mod.F90  formula_mod.F90  halo_mod.F90  history_mod.F90  initial_mod.F90  log_mod.F90  math_mod.F90  namelist_mod.F90  parallel_mod.F90  parallel_types_mod.F90  parallel_zonal_mod.F90  process_mod.F90  restart_mod.F90  sphere_geometry_mod.F90  string_mod.F90  time_mod.F90  tridiag_hzd_mod.F90  tridiag_mkl_mod.F90  tridiag_mod.F90  tridiag_spk_mod.F90
tools/: calc_errors.py  check_reduce.py  factors.py  get_era5.py  plot_2d.py  plot_adv_sr.py  plot_coarse_polar_lats.py  plot_contour.py  plot_curves.py  plot_dcmip12.py  plot_dlats.py
